--- a/.gitattributes
+++ b/.gitattributes
@@ -8305,6 +8305,8 @@ internal/webapp/vis/demo/demo_script.js -text
 internal/webapp/vis/demo/index.html -text
 internal/webapp/vis/lib/d3-3.3.9.js -text
 internal/webapp/vis/lib/d3-3.3.9.min.js -text
+internal/webapp/vis/lib/d3pie.js -text
+internal/webapp/vis/lib/d3pie.min.js -text
 internal/webapp/vis/lib/hexbin.js -text
 internal/webapp/vis/lib/hexbin.min.js -text
 internal/webapp/vis/lib/patches.js -text
