--- a/.gitattributes
+++ b/.gitattributes
@@ -1368,6 +1368,7 @@ api/src/org/labkey/api/study/StudyEntity.java -text
 api/src/org/labkey/api/study/StudyFolderTabs.java -text
 api/src/org/labkey/api/study/StudySerializationRegistry.java -text
 api/src/org/labkey/api/study/StudyService.java -text
+api/src/org/labkey/api/study/StudySnapshotType.java -text
 api/src/org/labkey/api/study/StudyUrls.java -text
 api/src/org/labkey/api/study/TimepointType.java -text
 api/src/org/labkey/api/study/Treatment.java -text
