--- a/.gitattributes
+++ b/.gitattributes
@@ -203,6 +203,7 @@ api/src/org/labkey/api/collections/OneBasedList.java -text
 api/src/org/labkey/api/collections/ResultSetRowMapFactory.java -text
 api/src/org/labkey/api/collections/RowMap.java -text
 api/src/org/labkey/api/collections/RowMapFactory.java -text
+api/src/org/labkey/api/collections/Sampler.java -text
 api/src/org/labkey/api/collections/SetFromMap.java -text
 api/src/org/labkey/api/collections/Sets.java -text
 api/src/org/labkey/api/collections/SparseBitSet.java -text
