--- a/.gitattributes
+++ b/.gitattributes
@@ -7477,6 +7477,7 @@ internal/webapp/app/Filter.js -text
 internal/webapp/app/HttpInterceptor.js -text
 internal/webapp/app/LoadingMask.js -text
 internal/webapp/app/MeasurePicker.js -text
+internal/webapp/app/Messaging.js -text
 internal/webapp/app/OlapExplorer.js -text
 internal/webapp/app/Route.js -text
 internal/webapp/app/Selection.js -text
