--- a/.gitattributes
+++ b/.gitattributes
@@ -1643,6 +1643,7 @@ api/src/org/labkey/api/view/AlwaysAvailableWebPartFactory.java -text
 api/src/org/labkey/api/view/BadRequestException.java -text
 api/src/org/labkey/api/view/BaseWebPartFactory.java -text
 api/src/org/labkey/api/view/Collapsible.java -text
+api/src/org/labkey/api/view/ColorPickerDisplayColumn.java -text
 api/src/org/labkey/api/view/DefaultModelAndView.java -text
 api/src/org/labkey/api/view/FolderTab.java -text
 api/src/org/labkey/api/view/ForbiddenProjectException.java -text
