--- a/.gitattributes
+++ b/.gitattributes
@@ -310,6 +310,7 @@ api/src/org/labkey/api/data/LegacySqlSelector.java -text
 api/src/org/labkey/api/data/LegacyTableSelector.java -text
 api/src/org/labkey/api/data/LimitedPHIPermission.java -text
 api/src/org/labkey/api/data/LinkedSchemaCustomizer.java -text
+api/src/org/labkey/api/data/LockManager.java -text
 api/src/org/labkey/api/data/LoggingResultSetWrapper.java -text
 api/src/org/labkey/api/data/LookupColumn.java -text
 api/src/org/labkey/api/data/MVDisplayColumn.java -text
