--- a/.gitattributes
+++ b/.gitattributes
@@ -1815,6 +1815,7 @@ api/webapp/clientapi/core/Specimen.js -text
 api/webapp/clientapi/core/Utils.js -text
 api/webapp/clientapi/core/Visualization.js -text
 api/webapp/clientapi/dom/Chart.js -text
+api/webapp/clientapi/dom/DataRegion.js -text
 api/webapp/clientapi/dom/Form.js -text
 api/webapp/clientapi/dom/GetData.js -text
 api/webapp/clientapi/dom/NavTrail.js -text
