--- a/.gitattributes
+++ b/.gitattributes
@@ -8043,6 +8043,8 @@ internal/webapp/internal/MiniProfiler/miniprofiler.tmpl -text
 internal/webapp/internal/jQuery.lib.xml -text
 internal/webapp/internal/jQuery/jquery-1.11.2.js -text
 internal/webapp/internal/jQuery/jquery-1.11.2.min.js -text
+internal/webapp/internal/jQuery/jquery-dateFormat.js -text
+internal/webapp/internal/jQuery/jquery-dateFormat.min.js -text
 internal/webapp/js_color_picker_v2.css -text
 internal/webapp/js_color_picker_v2.js -text
 internal/webapp/labkey.js -text
