Sweeten the alerts.

--- a/.gitattributes
+++ b/.gitattributes
@@ -8045,6 +8045,8 @@ internal/webapp/internal/jQuery/jquery-1.11.2.js -text
 internal/webapp/internal/jQuery/jquery-1.11.2.min.js -text
 internal/webapp/internal/jQuery/jquery-dateFormat.js -text
 internal/webapp/internal/jQuery/jquery-dateFormat.min.js -text
+internal/webapp/internal/jQuery/sweet-alert.css -text
+internal/webapp/internal/jQuery/sweet-alert.min.js -text
 internal/webapp/js_color_picker_v2.css -text
 internal/webapp/js_color_picker_v2.js -text
 internal/webapp/labkey.js -text
