Set groupTabPanel as dependency of ext3/dataregion.

--- a/.gitattributes
+++ b/.gitattributes
@@ -7670,6 +7670,7 @@ internal/webapp/groupTabPanel/GroupTab.css -text
 internal/webapp/groupTabPanel/GroupTab.js -text
 internal/webapp/groupTabPanel/GroupTabPanel.js -text
 internal/webapp/groupTabPanel/UngroupedTab.css -text
+internal/webapp/groupTabPanel/groupTab.lib.xml -text
 internal/webapp/gxt/css/gxt-all.css -text
 internal/webapp/gxt/css/gxt-gray.css -text
 internal/webapp/gxt/images/default/box/corners-blue.gif -text
