--- a/.gitattributes
+++ b/.gitattributes
@@ -1833,6 +1833,7 @@ api/webapp/clientapi/dom/GetData.js -text
 api/webapp/clientapi/dom/NavTrail.js -text
 api/webapp/clientapi/dom/Portal.js -text
 api/webapp/clientapi/dom/Query.js -text
+api/webapp/clientapi/dom/Security.js -text
 api/webapp/clientapi/dom/Tour.js -text
 api/webapp/clientapi/dom/Utils.js -text
 api/webapp/clientapi/dom/WebPart.js -text
@@ -8036,7 +8037,6 @@ internal/webapp/hopscotch/css/hopscotch.css -text
 internal/webapp/hopscotch/img/sprite-green.png -text
 internal/webapp/hopscotch/img/sprite-orange.png -text
 internal/webapp/hopscotch/js/hopscotch.js -text
-internal/webapp/impersonate_dialog.lib.xml -text
 internal/webapp/index.html -text
 internal/webapp/internal-FileDrop.lib.xml -text
 internal/webapp/internal.lib.xml -text
