#22322 Testing & adjustments to officially support synonyms
Synonym support substantially complete:

- Add JdbcMetaDataLocator, which dialects use to adjust where and how JDBC meta data is retrieved
- Rewrite JdbcMetaDataSelector: remove from Selector hierarchy, simplify, and delegate to JdbcMetaDataLocator for many functions
- MySQL dialect returns custom JdbcMetaDataLocator to handle its funky catalog/schema behavior
- SQL Server dialect returns custom JdbcMetaDataLocator to find synonym meta data
- Add four example synonyms to test schema on SQL Server; add four analogous views on PostgreSQL (to keep tests happy)
- Add support for "UNKNOWN" tableDbType in schema.xml
- Move the "raw meta data" actions to use JdbcMetaDataSelector instead of calling JDBC functions manually

Also, break up the DbSchema$TestCase into separate junit tests

--- a/.gitattributes
+++ b/.gitattributes
@@ -485,6 +485,8 @@ core/resources/schemas/dbscripts/postgresql/prop-create.sql -text
 core/resources/schemas/dbscripts/postgresql/prop-drop.sql -text
 core/resources/schemas/dbscripts/postgresql/test-0.00-12.10.sql -text
 core/resources/schemas/dbscripts/postgresql/test-13.10-13.20.sql -text
+core/resources/schemas/dbscripts/postgresql/test-create.sql -text
+core/resources/schemas/dbscripts/postgresql/test-drop.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-0.00-12.30.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-12.30-13.10.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-13.10-13.20.sql -text
@@ -668,6 +670,7 @@ core/resources/schemas/dbscripts/sqlserver/prop-create.sql -text
 core/resources/schemas/dbscripts/sqlserver/prop-drop.sql -text
 core/resources/schemas/dbscripts/sqlserver/test-0.00-12.10.sql -text
 core/resources/schemas/dbscripts/sqlserver/test-13.10-13.20.sql -text
+core/resources/schemas/dbscripts/sqlserver/test-14.32-14.33.sql -text
 core/resources/schemas/labkey.xml -text
 core/resources/scripts/ExtAdapter.js -text
 core/resources/scripts/console.js -text
