--- a/.gitattributes
+++ b/.gitattributes
@@ -1384,6 +1384,7 @@ api/src/org/labkey/api/study/Study.java -text
 api/src/org/labkey/api/study/StudyCachable.java -text
 api/src/org/labkey/api/study/StudyEntity.java -text
 api/src/org/labkey/api/study/StudyFolderTabs.java -text
+api/src/org/labkey/api/study/StudyReloadSource.java -text
 api/src/org/labkey/api/study/StudySerializationRegistry.java -text
 api/src/org/labkey/api/study/StudyService.java -text
 api/src/org/labkey/api/study/StudySnapshotType.java -text
