Spec 22324: Argos - Management for deidentified data. - Includes UI with related QueryController actions - Add entry point to new UI in the query browser - Setup TextWriter to take a stream (used to avoid intermediate file when gunziping).

--- a/.gitattributes
+++ b/.gitattributes
@@ -2744,6 +2744,7 @@ query/src/org/labkey/query/view/editApp.jsp -text
 query/src/org/labkey/query/view/editQueryWebPart.jsp -text
 query/src/org/labkey/query/view/exportTables.jsp -text
 query/src/org/labkey/query/view/externalSchema.jsp -text
+query/src/org/labkey/query/view/generateSchema.jsp -text
 query/src/org/labkey/query/view/internalDeleteView.jsp -text
 query/src/org/labkey/query/view/internalNewView.jsp -text
 query/src/org/labkey/query/view/internalSourceView.jsp -text
