Make SQL Server core.fn_dropIfExists cascade schema drop to functions and aggregates; don't allow it to try dropping the dbo schema itself.

--- a/.gitattributes
+++ b/.gitattributes
@@ -500,6 +500,7 @@ core/resources/schemas/dbscripts/sqlserver/core-14.21-14.22.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-14.22-14.23.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-14.30-14.31.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-14.31-14.32.sql -text
+core/resources/schemas/dbscripts/sqlserver/core-14.33-14.34.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-create.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-drop.sql -text
 core/resources/schemas/dbscripts/sqlserver/group_concat_install.sql -text
