Issue 22581: **Survey config options not apparent - add documentation to the survey designer UI page for config options - add new config options for survey start section behavior

--- a/.gitattributes
+++ b/.gitattributes
@@ -4172,6 +4172,7 @@ survey/src/org/labkey/survey/view/surveyWizard.jsp -text
 survey/webapp/survey/AttachmentField.js -text
 survey/webapp/survey/BaseSurveyPanel.js -text
 survey/webapp/survey/Survey.css -text
+survey/webapp/survey/SurveyDesign.css -text
 survey/webapp/survey/SurveyGridQuestion.js -text
 survey/webapp/survey/SurveyPanel.js -text
 survey/webapp/survey/UsersCombo.js -text
