--- a/.gitattributes
+++ b/.gitattributes
@@ -1423,6 +1423,7 @@ api/src/org/labkey/api/study/TimepointType.java -text
 api/src/org/labkey/api/study/Treatment.java -text
 api/src/org/labkey/api/study/TreatmentProduct.java -text
 api/src/org/labkey/api/study/TreatmentVisitMap.java -text
+api/src/org/labkey/api/study/UnionTable.java -text
 api/src/org/labkey/api/study/Visit.java -text
 api/src/org/labkey/api/study/Well.java -text
 api/src/org/labkey/api/study/WellData.java -text
