Issue 22527: Need to implement ResultSet.getRow() for SAS
Implement RowTrackingResultSetWrapper and return it from SAS prepared statements

Additional fixes for SAS/SHARE:
- Add explicit supportsSchemas() method to JdbcMetaDataLocator instead of overloading getCatalogName()
- In ResultSetWrapper, delegate all JDBC 4.0 and 4.1 methods to underlying ResultSet (instead of throwing). We've started using these (e.g., isClosed()).
- Implement isClosed() ourselves in SasResultSetWrapper

--- a/.gitattributes
+++ b/.gitattributes
@@ -360,6 +360,7 @@ api/src/org/labkey/api/data/ResultSetSelector.java -text
 api/src/org/labkey/api/data/ResultSetSelectorTestCase.java -text
 api/src/org/labkey/api/data/Results.java -text
 api/src/org/labkey/api/data/ResultsImpl.java -text
+api/src/org/labkey/api/data/RowTrackingResultSetWrapper.java -text
 api/src/org/labkey/api/data/RuntimeSQLException.java -text
 api/src/org/labkey/api/data/SQLFragment.java -text
 api/src/org/labkey/api/data/SQLGenerationException.java -text
