--- a/.gitattributes
+++ b/.gitattributes
@@ -3215,6 +3215,7 @@ study/resources/schemas/dbscripts/postgresql/study-14.30-14.31.sql -text
 study/resources/schemas/dbscripts/postgresql/study-14.31-14.32.sql -text
 study/resources/schemas/dbscripts/postgresql/study-14.32-14.33.sql -text
 study/resources/schemas/dbscripts/postgresql/study-14.33-14.34.sql -text
+study/resources/schemas/dbscripts/postgresql/study-14.34-14.35.sql -text
 study/resources/schemas/dbscripts/postgresql/study-create.sql -text
 study/resources/schemas/dbscripts/postgresql/study-drop.sql -text
 study/resources/schemas/dbscripts/sqlserver/obsolete/study-0.00-1.11.sql -text
@@ -3458,6 +3459,7 @@ study/resources/schemas/dbscripts/sqlserver/study-14.30-14.31.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-14.31-14.32.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-14.32-14.33.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-14.33-14.34.sql -text
+study/resources/schemas/dbscripts/sqlserver/study-14.34-14.35.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-create.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-drop.sql -text
 study/resources/schemas/study.xml -text
