StudyLotsOfParticipantsTest: lets try splitting the data import into 3 tsv files to see if TeamCity likes that better

--- a/.gitattributes
+++ b/.gitattributes
@@ -4135,6 +4135,8 @@ study/src/org/labkey/study/writer/ViewCategoryWriter.java -text
 study/src/org/labkey/study/writer/VisitMapWriter.java -text
 study/src/org/labkey/study/writer/XmlVisitMapWriter.java -text
 study/test/sampledata/study/Demographics.tsv -text
+study/test/sampledata/study/Demographics2.tsv -text
+study/test/sampledata/study/Demographics3.tsv -text
 study/test/sampledata/study/LotsOfPtidsStudy.folder.zip -text
 study/test/sampledata/study/LotsOfPtidsStudy_NoData.folder.zip -text
 study/test/sampledata/study/Results.tsv -text
