checkpoint : redcap module

--- a/.gitattributes
+++ b/.gitattributes
@@ -2854,6 +2854,20 @@ query/webapp/reports/web.png -text
 query/webapp/reports/wordprocessing.png -text
 query/webapp/reports/xls.gif -text
 query/webapp/scriptreporteditor.lib.xml -text
+redcap/RedCap.iml -text
+redcap/module.properties -text
+redcap/resources/web/redcap/settings.js -text
+redcap/src/org/labkey/redcap/ExportDataCommand.java -text
+redcap/src/org/labkey/redcap/ExportEventsCommand.java -text
+redcap/src/org/labkey/redcap/ExportMetadataCommand.java -text
+redcap/src/org/labkey/redcap/RedcapCommandResponse.java -text
+redcap/src/org/labkey/redcap/RedcapConfiguration.java -text
+redcap/src/org/labkey/redcap/RedcapController.java -text
+redcap/src/org/labkey/redcap/RedcapExport.java -text
+redcap/src/org/labkey/redcap/RedcapManager.java -text
+redcap/src/org/labkey/redcap/RedcapModule.java -text
+redcap/src/org/labkey/redcap/RedcapReloadSource.java -text
+redcap/src/org/labkey/redcap/view/configure.jsp -text
 search/Search.iml -text
 search/lib/instructions.txt -text
 search/lib/lucene-4.8.1-src.zip -text
