Immutable Domain Descriptors. Use DomainDescriptor.Builder.

--- a/.gitattributes
+++ b/.gitattributes
@@ -324,6 +324,7 @@ api/src/org/labkey/api/data/LoggingResultSetWrapper.java -text
 api/src/org/labkey/api/data/LookupColumn.java -text
 api/src/org/labkey/api/data/MVDisplayColumn.java -text
 api/src/org/labkey/api/data/MVDisplayColumnFactory.java -text
+api/src/org/labkey/api/data/MapConstructorObjectFactory.java -text
 api/src/org/labkey/api/data/MenuButton.java -text
 api/src/org/labkey/api/data/MethodInfo.java -text
 api/src/org/labkey/api/data/MultiValuedDisplayColumn.java -text
