Spec #22539: Convert customize view to Ext4 - checkpoint: includes updated tab panel layout (remove GroupTabPanel ux), most of Ext4 conversion for ColumnsTab

--- a/.gitattributes
+++ b/.gitattributes
@@ -7705,6 +7705,7 @@ internal/webapp/designer/Designer.js -text
 internal/webapp/designer/FieldMetaStore.js -text
 internal/webapp/designer/FieldTreeLoader.js -text
 internal/webapp/designer/Tabs.js -text
+internal/webapp/designer/Utils.js -text
 internal/webapp/designer/designer2.js -text
 internal/webapp/designer/wand.gif -text
 internal/webapp/dropzone-3.8.4/README.txt -text
