--- a/.gitattributes
+++ b/.gitattributes
@@ -2016,6 +2016,7 @@ study/resources/schemas/dbscripts/postgresql/study-14.32-14.33.sql -text
 study/resources/schemas/dbscripts/postgresql/study-14.33-14.34.sql -text
 study/resources/schemas/dbscripts/postgresql/study-14.34-14.35.sql -text
 study/resources/schemas/dbscripts/postgresql/study-15.10-15.11.sql -text
+study/resources/schemas/dbscripts/postgresql/study-15.11-15.12.sql -text
 study/resources/schemas/dbscripts/postgresql/study-create.sql -text
 study/resources/schemas/dbscripts/postgresql/study-drop.sql -text
 study/resources/schemas/dbscripts/sqlserver/obsolete/study-0.00-12.20.sql -text
@@ -2042,6 +2043,7 @@ study/resources/schemas/dbscripts/sqlserver/study-14.32-14.33.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-14.33-14.34.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-14.34-14.35.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-15.10-15.11.sql -text
+study/resources/schemas/dbscripts/sqlserver/study-15.11-15.12.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-create.sql -text
 study/resources/schemas/dbscripts/sqlserver/study-drop.sql -text
 study/resources/schemas/study.xml -text
