Allow modules to optionally include an api-src directory that is made available to other modules at compile and runtime. This results in a new MODULENAME_api.jar that's bundled into the module's ./lib directory. For modules that define their own build.xml, we'll invoke the new, mandatory build_module_api (which is free to defer back to the main build.xml's implementation)
Add second compilation pass through all modules to compile their APIs prior to the regular implementation build.

Refactor MS2 and MS1 APIs from the core API into their own modules.

Also, capture all WARN and higher messages during module parallel build. Show them at the end if any of them errored. It's a bit noisy still, but much better than digging through all of the interleaved output to find the message from javac

--- a/core/build.xml
+++ b/core/build.xml
@@ -12,6 +12,15 @@
         </ant>
     </target>
 
+    <!-- Called by the main build.xml with inheritall = true; other callers (e.g., top-level build target)
+         must define all the properties used below. -->
+    <target name="build_module_api">
+        <ant antfile="${basedir}/build.xml"
+             target="sub_build_module_api"
+             inheritall="true">
+        </ant>
+    </target>
+
     <!--
     Create a few server-side javascript files.
     NOTE: copies some source files into the core/resources/scripts directory instead of the build directory
