Discussions: support for client dependencies.

--- a/.gitattributes
+++ b/.gitattributes
@@ -92,6 +92,7 @@ announcements/src/org/labkey/announcements/update.jsp -text
 announcements/src/org/labkey/announcements/view/editTour.jsp -text
 announcements/webapp/announcements/EditTour.css -text
 announcements/webapp/announcements/EditTour.js -text
+announcements/webapp/announcements/discuss.js -text
 audit/module.properties -text
 audit/resources/schemas/dbscripts/postgresql/audit-0.00-12.30.sql -text
 audit/resources/schemas/dbscripts/postgresql/audit-13.30-14.10.sql -text
