Spec 23219: Add module properties for description - expose core.modules as a table with some values from in-memory - add 'active modules' column to container table

--- a/.gitattributes
+++ b/.gitattributes
@@ -459,6 +459,7 @@ core/src/org/labkey/core/query/CoreQuerySchema.java -text
 core/src/org/labkey/core/query/FileListTableInfo.java -text
 core/src/org/labkey/core/query/GroupAuditProvider.java -text
 core/src/org/labkey/core/query/GroupAuditViewFactory.java -text
+core/src/org/labkey/core/query/ModulesTableInfo.java -text
 core/src/org/labkey/core/query/UserAuditProvider.java -text
 core/src/org/labkey/core/query/UserAuditViewFactory.java -text
 core/src/org/labkey/core/query/UsersDomainKind.java -text
