--- a/announcements/module.properties
+++ b/announcements/module.properties
@@ -1,2 +1,16 @@
 ModuleClass: org.labkey.announcements.AnnouncementModule
 ModuleDependencies: Wiki
+Label: Message Board and Discussion Service
+Description: A workgroup or user community can use LabKey message boards \
+    to post announcements and files and to carry on threaded discussions. \
+    A message board is useful for discussing ongoing work, answering \
+    questions and providing support, and posting documents for project users. \
+    Message boards can also be used to track and document workflow task \
+    completion and coordinate handoff of responsibility for different steps \
+    when a more involved issue tracking system is not warranted.
+URL: https://www.labkey.org/wiki/home/Documentation/page.view?name=messages
+Maintainer: Susan Hert <susanh@labkey.com>
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
