Issue 23265: module VcsURL property always picking up svn root url instead of module specific url

--- a/core/module.properties
+++ b/core/module.properties
@@ -1,3 +1,7 @@
 Name: Core
 ModuleClass: org.labkey.core.CoreModule
 Version: 15.10
+Organization: LabKey Software
+OrganizationURL: https://www.labkey.com/
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
